--- a/_config.yml
+++ b/_config.yml
@@ -7,9 +7,9 @@
 
 # Site Settings
 locale                   : "zh-CN"
-title                    : "Caixia Fu(扶彩霞)"
+title                    : "AAA"
 title_separator          : "-"
-name                     : "Caixia Fu(扶彩霞)"
+name                     : "AAA"
 description              : "Master's student at UESTC. Focusing on ...."
 repository               : "fc102226/fc102226.github.io"
 google_scholar_stats_use_cdn : true
@@ -24,7 +24,7 @@ baidu_site_verification  : #code-ZxFK3f4pfb
 
 # Site Author
 author:
-  name             : "Caixia Fu(扶彩霞)"
+  name             : "AAA"
   avatar           : "images/hh.png"
   bio              : "University Of Electronic Science And Technology Of China"
   location         : "Si Chuan, China"
